# MineCrap

./: CMakeLists.txt  cmakeLists.txt  controls.txt  devNotes.txt  options.txt  readme.md
.github/workflows/: cmake-windows.yml
biomes/: desert.json  fir_forest.json  flower_field.json  forest.json  maple_forest.json  ocean.json  plains.json  rocky_waters.json
blocks/: builtIn.json  testBlocks.json
models/: pebble.json  stairs.json
shaders/: border_fragment.glsl  cross_fragment.glsl  cross_vertex.glsl  crosshair_vertex.glsl  fragment.glsl  liquid_fragment.glsl  liquid_vertex.glsl  vertex.glsl
src/: blockDB.cpp  blockDB.hpp  block_interaction.cpp  block_interaction.hpp  camera.cpp  chunk.cpp  chunk.hpp  chunkTerrain.cpp  imguiOverlay.cpp  imguiOverlay.hpp  input.cpp  input.hpp  main.cpp  noise.cpp  noise.hpp  options.cpp  renderer.cpp  renderer.hpp  shader.cpp  window.cpp  window.hpp  world.cpp  world.hpp
src/core/: camera.cpp  camera.hpp  controls.cpp  controls.hpp  input.cpp  input.hpp  options.cpp  window.cpp
src/renderer/: blockPreviewRenderer.cpp  blockPreviewRenderer.hpp  imguiOverlay.cpp  imguiOverlay.hpp  renderer.cpp  renderer.hpp
src/world/: biomeDB.cpp  biomeDB.hpp  blockDB.cpp  blockDB.hpp  block_interaction.cpp  block_interaction.hpp  chunk.cpp  chunk.hpp  chunkTerrain.cpp  chunkTerrain.hpp  modelDB.cpp  modelDB.hpp  noise.cpp  noise.hpp  structureDB.cpp  structureDB.hpp  world.cpp  world.hpp
structures/: bistort.json  blueSage.json  crocus.json  dandelion.json  darkGrass.json  darkGrassShort.json  deadBush.json  deadGrass.json  firTree.json  grass.json  grassShort.json  greenMaple.json  lavender.json  leavesCarpet.json  lily.json  mapleLeavesCarpet.json  palmTree.json  pebble.json  pinkAnemone.json  poppy.json  redRose.json  rock.json  smallFirTree.json
